<resources>
    <string name="app_name">App - Template</string>
    <!--Global Strings-->
    <string name="global_facebook">Facebook</string>
    <string name="global_google">Google</string>
    <string name="global_or">Ou</string>
    <string name="global_yes">Sim</string>
    <string name="global_no">Não</string>
    <string name="global_wait">Aguarde...</string>
    <string name="global_try_again">Tentar novamente</string>
    <string name="global_cancel">Cancelar</string>
    <string name="global_do_login">Fazer login</string>
    <string name="global_ok">OK</string>
    <string name="global_send">Enviar</string>
    <string name="global_error">Erro</string>
    <string name="global_pick_avatar_using">Escolher imagem usando:</string>
    <!--Error Strings-->
    <string name="error_title">Oops!</string>
    <string name="error_socket_timeout">Não foi possível completar a operação. Conexão expirada.</string>
    <string name="error_not_processable">Não foi possível realizar esta operação</string>
    <string name="error_not_found">Não encontrado</string>
    <string name="error_unknown">Não foi possível completar a operação. Tente novamente mais tarde. Se o problema persistir entre em contato conosco.</string>
    <string name="error_network">Não foi possível completar a operação. Verifique sua conexão e tente novamente.</string>
    <string name="error_unprocessable">Não foi possível completar a operação. Os seguintes problemas foram encontrados:\n\n%s</string>
    <string name="error_unauthorized_login_now">Não foi possível completar a operação. Sua sessão expirou. Por favor faça login novamente.</string>
    <string name="error_invalid_email">Email incorreto</string>
    <string name="error_invalid_password">Senha incorreta</string>
    <!-- Activity Login -->
    <string name="activity_login_sign_in">Entrar</string>
    <string name="activity_login_sign_up">Criar uma conta</string>
    <string name="activity_login_forgot_password">Esqueci minha senha</string>
    <string name="activity_login_sign_in_with">Faça login com</string>
    <string name="activity_login_please_wait_for_result">Aguarde o resultado do login para prosseguir.</string>
    <!-- Activity Recover Password -->
    <string name="activity_recover_password_title">Recuperar senha</string>
    <string name="activity_recover_password_confirmation">O email com as instruções de recuperação foi enviado.</string>
    <!-- Activity Register -->
    <string name="activity_register">Cadastro</string>
    <string name="activity_register_choose_picture">Escolher foto</string>
    <string name="activity_register_submit">Finalizar cadastro</string>
    <!-- Validation -->
    <string name="validation_name">Nome inválido</string>
    <string name="validation_email">Email inválido</string>
    <string name="validation_phone_number">Número de telefone inválido</string>
    <string name="validation_cpf">CPF inválido</string>
    <string name="validation_password">Senha inválida</string>
    <string name="validation_password_confirmation">Confirmação diferente da senha</string>
    <!-- Hint -->
    <string name="hint_user_or_email">Usuário ou email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_full_name">Nome Completo</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Celular</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_password_confirmation">Confirmar senha</string>
    <string name="hint_recover_password">Por favor, informe seu email cadastrado.</string>
    <string name="global_warning">Aviso</string>
    <string name="image_access_rationale">Precisamos da permissão para acessar suas imagens e câmera para usar sua foto de perfil</string>
    <string name="go_to_configurations">Abrir configurações</string>
</resources>
