<?xml version="1.0" encoding="utf-8"?>
<layout >

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_16"
                android:paddingRight="@dimen/spacing_16">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_72"
                    app:srcCompat="@drawable/ic_logo_96dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_48"
                    android:text="@string/activity_login_sign_in_with"
                    android:textColor="@color/colorLightTextPrimary"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/spacing_24"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/facebook_button"
                        style="@style/Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_8"
                        android:layout_weight="1"
                        android:background="@drawable/selector_button_facebook"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_facebook_20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_16"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/global_facebook"
                            android:textAppearance="@style/ButtonTextAppearance" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/google_button"
                        style="@style/Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_8"
                        android:layout_weight="1"
                        android:background="@drawable/selector_button_google"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_google_20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_16"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/global_google"
                            android:textAppearance="@style/ButtonTextAppearance"
                            android:textColor="@color/colorDarkTextSecondary" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_24"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/colorLightDivider" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_16"
                        android:layout_marginRight="@dimen/spacing_16"
                        android:text="@string/global_or"
                        android:textColor="@color/colorLightDivider"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/colorLightDivider" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_24"
                    android:textColorHint="@color/colorLightHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_user_or_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorLightTextPrimary" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:textColorHint="@color/colorLightHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorLightTextPrimary" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:text="@string/activity_login_sign_in" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:layout_marginBottom="@dimen/spacing_16"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/register_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:fontFamily="sans-serif-medium"
                        android:paddingTop="@dimen/spacing_8"
                        android:paddingEnd="@dimen/spacing_8"
                        android:paddingBottom="@dimen/spacing_8"
                        android:text="@string/activity_login_sign_up"
                        android:textColor="@color/colorLightTextPrimary"
                        android:textSize="14sp" />

                    <androidx.legacy.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/recover_password_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:fontFamily="sans-serif-medium"
                        android:paddingStart="@dimen/spacing_8"
                        android:paddingTop="@dimen/spacing_8"
                        android:paddingBottom="@dimen/spacing_8"
                        android:text="@string/activity_login_forgot_password"
                        android:textColor="@color/colorLightTextPrimary"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <com.jera.apptemplate.util.viewmodel.placeholder.view.PlaceholderView
            android:id="@+id/placeholder_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</layout>